--- a/Frontend/processum-frontend/package.json
+++ b/Frontend/processum-frontend/package.json
@@ -29,7 +29,9 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
-    "@tailwindcss/cli": "^4.1.18",
+    "ag-grid-angular": "^35.0.0",
+    "daisyui": "^5.5.14",
+    "lucide-angular": "^0.562.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -37,10 +39,9 @@
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.18",
     "jsdom": "^27.1.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.18",
+    "postcss": "^8.5.6",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
